@@ -1,3 +1,8 @@
+2005-11-19 Jorg Schuler <jcsjcs@users.sourceforge.net>
+
+	 * file.c, file.h, file_itunesdb.c: basic video support --
+           thanks to Uwe Hermann for the input.
+
 2005-11-17 Jorg Schuler <jcsjcs@users.sourceforge.net>
 
 	 * configure.in: make check for flex fatal.
