@@ -1,4 +1,4 @@
-/* Time-stamp: <2005-06-20 23:05:05 jcs>
+/* Time-stamp: <2005-11-19 13:46:14 jcs>
 |
 |  Copyright (C) 2002-2005 Jorg Schuler <jcsjcs at users sourceforge net>
 |  Part of the gtkpod project.
@@ -39,16 +39,19 @@
 #include "itdb.h"
 
 
-/* values below -1 are private to individual functions */
+/* values below -1 may be used in individual functions */
 typedef enum
 {
-    FILE_TYPE_MISC = -2,
     FILE_TYPE_UNKNOWN = 0,
     FILE_TYPE_MP3,
     FILE_TYPE_M4A,
     FILE_TYPE_M4P,
     FILE_TYPE_M4B,
     FILE_TYPE_WAV,
+    FILE_TYPE_M4V,
+    FILE_TYPE_MP4,
+    FILE_TYPE_MOV,
+    FILE_TYPE_MPG,
     FILE_TYPE_M3U,
     FILE_TYPE_PLS
 } FileType;
@@ -63,7 +66,7 @@ typedef enum
 
 typedef void (*AddTrackFunc)(Playlist *plitem, Track *track, gpointer data);
 
-gint determine_file_type(gchar *path);
+FileType determine_file_type(gchar *path);
 gboolean add_track_by_filename (iTunesDB *itdb, gchar *name,
 				Playlist *plitem, gboolean descend,
 				AddTrackFunc addtrackfunc, gpointer data);
